--- a/main.css
+++ b/main.css
@@ -36,3 +36,10 @@ color: white;
     width:600px;
     height:auto;
 }
+.row1 .row2 .row3 .row4 .row5 .row6 .row7{ width:600px;   
+}
+
+.row1 img { 
+    width:600px;
+    height: 266px;
+}
