--- a/main.css
+++ b/main.css
@@ -66,3 +66,24 @@ font-family: Arial, Helvetica, sans-serif;
     color: darkgray;
     
 }
+.button {
+    border: 0 none;
+    border-radius: 20px;
+    padding: 12px 10px;
+    margin:5px;
+    width:5em;
+    height: 1em;
+    display: flex;
+    cursor:pointer;
+    justify-content:center;
+    align-items:center;
+    
+flex: 0 0 10px;
+    text-align: center;
+    line-height: 1.0;
+    color:snow;
+    font-size: 18px;
+    font-weight: 500;
+    transition: all 40ems ease-in-out;
+    background: black;
+}
