--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 #container {
 width:600px;
     height:auto;
+    margin: 0 auto;
 
 }
 #Header {
@@ -77,8 +78,7 @@ font-family: Arial, Helvetica, sans-serif;
     cursor:pointer;
     justify-content:center;
     align-items:center;
-    
-flex: 0 0 10px;
+    flex: 0 0 10px;
     text-align: center;
     line-height: 1.0;
     color:snow;
@@ -86,4 +86,21 @@ flex: 0 0 10px;
     font-weight: 500;
     transition: all 40ems ease-in-out;
     background: black;
+}
+.row3 {
+  
+    display: table;
+    
+}
+.row3 td {
+height: auto;
+
+
+}
+
+.row3 img {
+    height:47px;
+    width:47px;
+    
+    
 }
