--- a/main.css
+++ b/main.css
@@ -94,7 +94,9 @@ font-family: Arial, Helvetica, sans-serif;
 }
 .row3 td {
 height: auto;
-
+align-content: center;
+ text-align: center;
+font-family: Segoe UI, Helvetica cursive;
 
 }
 
