--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@ height:150px;
 background-color: black;
 padding-left: 10px;
     margin-bottom: 10px;
+    margin:0 auto;
     
     
 }
@@ -19,7 +20,7 @@ padding-left: 10px;
     color:yellow;
     float: left;
     font-weight: 100;
-    margin-top: 90px;
+    margin-top: 80px;
     
     
    
@@ -41,8 +42,11 @@ color: white;
     height:auto;
 }
 table {
+    width:600px;
     border-collapse: separate;
     border-spacing: 20px 0px;
+        justify-content:center;
+    
 }
 
 
@@ -97,6 +101,7 @@ height: auto;
 align-content: center;
  text-align: center;
 font-family: Segoe UI, Helvetica cursive;
+color:dimgrey;
 
 }
 
@@ -108,6 +113,7 @@ font-family: Segoe UI, Helvetica cursive;
 .row4 {
     display: table;
     font-family: Segoe UI, Helvetica cursive;
+   
 }
 .row4 h3{
     
