--- a/main.css
+++ b/main.css
@@ -110,16 +110,16 @@ color:dimgrey;
     width:47px;
       
 }
-.row4 {
+.row4, .row5 {
     display: table;
     font-family: Segoe UI, Helvetica cursive;
    
 }
-.row4 h3{
+.row4 h3, row5 h3{
     
  
 }
-.row4 p {
+.row4 p, .row5 p{
     color:dimgrey;
     
 }
