--- a/css/app.css
+++ b/css/app.css
@@ -5,6 +5,7 @@ body {
     width: 603px;
     height: auto;
     margin: 0 auto;
+    background-color: gray;
 }
 .header {
     width: 100%;
@@ -40,6 +41,7 @@ span {
     background-image: url(../img/big_img.jpg);
     background-repeat: no-repeat;
     background-position: center center;
+    margin-top: 5%;
 }
 h4 {
     color: #3F3F3F;
@@ -48,8 +50,41 @@ h4 {
 .soft {
     color: black;
 }
-p {
+p1 {
     font-size: 70%;
     border-top: 1px solid rgba(0, 0, 0, 0.88);
     border-bottom: 1px solid rgba(0, 0, 0, 0.88);
+}
+
+/*row three with blog-posting */
+
+.blog-post {
+    margin-top: 5%;
+    padding-top: 5%;
+    width: 100%;
+    height: 266px;
+    background-color: antiquewhite;
+}
+.blog p {
+    color: #37383B;
+}
+
+/*row four positioning */
+
+.four {
+    width: 100%;
+    margin-top: 5%;
+    padding-top: 5%;
+    height: 200px;
+    /*    align-items: center;*/
+    background-color: antiquewhite;
+}
+.ping {
+    text-align: center;
+}
+h6 {
+    padding-top: 7%;
+}
+.cont {
+    color: #9f9f9f;
 }
