--- a/css/app.css
+++ b/css/app.css
@@ -88,3 +88,23 @@ h6 {
 .cont {
     color: #9f9f9f;
 }
+
+/*row five positioning ,content and image */
+
+.five {
+    width: 100%;
+    height: 300px;
+    padding-top: 4%;
+     margin-top: 5%;
+    background-color: antiquewhite;
+}
+.aside {
+    font-size: 1.2em;
+}
+.side {
+
+    padding-top: 3%;
+    text-align: left;
+    color: #9f9f9f;
+    font-weight: 400;
+}
