--- a/css/app.css
+++ b/css/app.css
@@ -91,20 +91,29 @@ h6 {
 
 /*row five positioning ,content and image */
 
-.five {
+.five,
+.six {
     width: 100%;
     height: 300px;
     padding-top: 4%;
-     margin-top: 5%;
+    margin-top: 5%;
     background-color: antiquewhite;
 }
 .aside {
     font-size: 1.2em;
 }
 .side {
-
     padding-top: 3%;
     text-align: left;
+    color: #9f9f9f;
+    font-weight: 400;
+}
+
+/*row six same as row 5 */
+
+.side2 {
+    padding-top: 3%;
+    /*    text-align: right;*/
     color: #9f9f9f;
     font-weight: 400;
 }
