--- a/css/app.css
+++ b/css/app.css
@@ -134,3 +134,14 @@ h6 {
     color: white;
     font-size: 1.2em;
 }
+
+/* row eight with title and
+content only
+********/
+
+.eight {
+    width: 100%;
+    height: 200px;
+    margin-top: 5%;
+    background-color: antiquewhite;
+}
